--- a/Frontend/uitour-app/src/layouts/HostLayout.css
+++ b/Frontend/uitour-app/src/layouts/HostLayout.css
@@ -1,6 +1,7 @@
 .host-layout {
   display: flex;
   flex-direction: column;
+
   min-height: 100vh;
   background: #fff;
 }
@@ -8,8 +9,13 @@
 /* Main content */
 .host-main {
   flex: 1;
-  padding-top: 120px;   /* Header height */
-  padding-bottom: 80px; /* Footer height */
+  padding-top: 120px;
+  /* Header height */
+  padding-bottom: 80px;
+  /* Footer height */
   box-sizing: border-box;
-  overflow-y: auto; /* Cho phép cuộn nếu nội dung dài */
+  overflow-y: auto;
+  display: block !important;
+  width: 100%;
+  /* Cho phép cuộn nếu nội dung dài */
 }
